src/k8s/platform/services/argo-workflows/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argo-workflows-https-redirect
  namespace: argo-workflows
spec:
  redirectScheme:
    scheme: https
    permanent: true
